# Scriptorium

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  marketplace.json  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: lit-add-pdf.md  lit-config.md  lit-deck.md  lit-podcast.md  lit-review.md  lit-show-audit.md  scriptorium-setup.md
.claude-plugin/hooks/: evidence_gate.sh  hooks.json
.codex/commands/: lit-add-pdf.md  lit-config.md  lit-deck.md  lit-export-bib.md  lit-mindmap.md  lit-podcast.md  lit-review.md  lit-scoping.md  lit-show-audit.md  scriptorium-setup.md
.codex/skills/: configuring-scriptorium  generating-overview  lit-audit-trail  (+12 more)
agents/: lit-cite-reviewer.md  lit-contradiction-reviewer.md
commands/: lit-config.md  lit-export-bib.md  lit-mindmap.md  lit-podcast.md  lit-review.md  lit-scoping.md  lit-show-audit.md  scriptorium-setup.md
docs/: cowork-smoke.md  obsidian-integration.md  publishing-notebooklm.md  v0.4-release-notes.md
hooks/: evidence_gate.sh  hooks.json  session-start.sh
scriptorium/: __init__.py  citations.py  cli.py  config.py  cowork.py  doctor.py  errors.py  export.py  extract.py  frontmatter.py  lock.py  migrate.py  nlm.py  paths.py  phase_state.py  prompts.py  publish.py  reviewers.py  scope.py  setup_flow.py  vault.py
scripts/: codex_link.sh  install.sh  install_plugin.sh  regen_small_v04_audit.py
tests/: conftest.py  test_arxiv.py  test_audit.py  test_audit_v03.py  test_bib_export.py  test_cascade.py  test_cli.py  test_cli_exit_codes.py  test_cli_scope.py  test_codex_symlinks.py  test_command_lit_config.py  test_command_lit_review.py  test_command_skill_content.py  test_commands_cc_only.py  test_config.py  test_config_load_order.py  test_config_v03_keys.py  test_conftest_publish_review.py  test_contradictions.py  test_corpus.py  test_dataview_queries.py  test_docs_cowork_smoke.py  test_doctor.py  test_e2e_caffeine.py  test_e2e_lit_scoping.py  test_end_of_review_prompt.py  test_errors.py  test_evidence.py  test_export_citations.py  test_export_code_fence_skip.py  test_export_corpus_missing.py  test_export_headings_paragraphs.py  test_export_inline_formatting.py  test_export_lists.py  test_export_tables.py  test_fixture_reviews.py  test_frontmatter.py  test_hook_evidence_gate.py  test_hook_overview.py  test_hook_scope_gate.py  (+71 more)
(+93 files in other folders)
