[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptorium-cli"
version = "0.3.1"
description = "Dual-runtime literature-review plugin for Claude Code and Cowork"
readme = "README.md"
authors = [{ name = "Jeremiah Wolf", email = "jeremiahmwolf@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pypdf>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
]

[project.scripts]
scriptorium = "scriptorium.cli:main"

[tool.setuptools.packages.find]
include = ["scriptorium*"]
