[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptorium-cli"
version = "0.3.1"
description = "Dual-runtime literature-review plugin for Claude Code and Cowork"
readme = "README.md"
authors = [{ name = "Jeremiah Wolf", email = "jeremiahmwolf@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "pypdf>=4.2",
  "python-docx>=1.1,<2",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "pytest-asyncio>=0.23,<2",
  "respx>=0.21,<1",
]

[project.scripts]
scriptorium = "scriptorium.cli:main"
scriptorium-mcp = "scriptorium.mcp:main"

[tool.setuptools.packages.find]
include = ["scriptorium*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
  "slow: long-running test (>1s) — skip with `-m 'not slow'` for fast iteration",
]
